# aerich

./: CHANGELOG.md  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
aerich/: __init__.py  cli.py  coder.py  migrate.py  utils.py
aerich/ddl/: __init__.py
aerich/ddl/mysql/: __init__.py
aerich/ddl/postgres/: __init__.py
aerich/ddl/sqlite/: __init__.py
aerich/inspectdb/: __init__.py  mysql.py  postgres.py  sqlite.py
tests/: _utils.py  indexes.py  models.py  models_second.py  old_models.py  test_command.py  test_ddl.py  test_fake.py  test_inspectdb.py  test_migrate.py  test_python_m.py  test_sqlite_migrate.py  test_utils.py
tests/assets/fake/: _tests.py  db.py  settings.py
tests/assets/sqlite_migrate/: _tests.py  conftest_.py  models.py  settings.py
